# FitnessMonitor

tests/: CMakeLists.txt  test_adc.c  test_adc_hal.c  test_button_functionality.c  test_buttons4.c  test_circular_buffer.c
tests/mocks/: circBufT_mock.h  deviceState_mock.h  display_manager_mock.h  step_counter_main_mock.h  switches_mock.h
tests/mocks/tiva_mocks/: buttons4_mock.h  gpio_mock.h
